# CloudTrack

./: .gitignore  CONTRIBUTING.md  Containerfile  LICENSE  Makefile  README.md  demo.py  minimal_example.py  pyproject.toml  run_backend.py  test_cam_resolution.py
.github/: rename_project.sh
.github/workflows/: main.yml  release.yml
cloud_track/: __main__.py  cli.py
cloud_track/api_functions/: live_demo.py  run_backend.py  video_demo.py
cloud_track/foundation_model_wrappers/: __init__.py  cora_wrapper.py  detector_vlm_pipeline.py  deva_wrapper.py  glee_wrapper.py  gpt_four_wrapper.py  grounding_dino_huggingface_wrapper.py  grounding_dino_utils.py  grounding_dino_wrapper.py  grounding_dino_wrapper_old.py  llava_wrapper.py  owl_vit_wrapper.py  paligemma_wrapper.py  wrapper_base.py
cloud_track/pipeline/: __init__.py  cloud_track.py  single_shot_detection.py
cloud_track/rpc_communication/: __init__.py  rpc_server.py  rpc_wrapper.py  utils.py
cloud_track/tracker_wrapper/: __init__.py
cloud_track/tracker_wrapper/opencv_wrapper/: __init__.py  cv_models.py  opencv_wraper.py
cloud_track/utils/: __init__.py  filter_boxes_and_masks.py  flow_control.py  messages.py  resampling.py  superpoint_utils.py  video_streamer.py  visualization.py  visualizer.py
conf/: demo.yaml  ref_vot_cv_evaluation.yaml  ref_vot_cv_evaluation_no_threshold.yaml  ref_vot_cv_evaluation_threshold.yaml  ref_vot_evaluation.yaml  sard_single_shot_evaluation.yaml  sard_single_shot_evaluation_baseline.yaml
conf/backend/: AIR-Tower.yaml  Lenovo-Laptop.yaml  localhost.yaml
conf/cv_tracker/: csrt.yaml  daSiamRpn.yaml  goturn.yaml  kcf.yaml  mil.yaml  nano.yaml  vit.yaml
conf/dataset/: ref_davis17_trainval.yaml
conf/dataset/vot/: ref_vot_22.yaml
conf/platform/: local.yaml  pi.yaml
conf/source/: apple_video.yaml  book_images.yaml  bussard_video.yaml  drone_sar_custom.yaml  drone_sar_custom_faint.yaml  polo.yaml  rowing_images.yaml  snake.yaml  tao_bike.yaml  webcam_live.yaml
conf/visualizer/: benchmark.yaml  headless.yaml  with_screen.yaml
conf/vlm/: None.yaml  gpt-4-turbo.yaml  gpt-4o-mini.yaml  gpt-4o.yaml  llava-13b-4bit.yaml  llava-7b-4bit.yaml  paligemma.yaml
conf/vlm/prompt_set/: gpt-4-prompts.yaml  llava-prompts.yaml  referring-prompts.yaml
evaluation/: baseline_deva.py  baseline_naive.py  evaluator.ipynb  run_air_eval.sh  sard_single_shot.py  setup_datasets.py  single_shot_eval.ipynb  vot_cv_evaluation.py  vot_evaluation.py
evaluation/utils/: __init__.py  aggregation_tools.py  deva_result_utils.py  eval_pipeline.py  fix_logging.py  metrics.py  multirun_manager.py  sard_dataset.py  single_shot_pipeline.py  vot_dataset.py
tests/: test_foundation_model_wrappers.py  test_opencv_wrapper.py
