[build-system]
requires = ["setuptools==75.6.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud_track"
version = "0.0.1"
authors = [
    { name = "Yannik Blei", email = "yannik.blei@utn.de" },
]
description = "Detection of objects in videos based on deep learning."
requires-python = ">=3.9" # NOTE: oldest non-EOL python (update on 10.2025)
dependencies = [
    "torch==2.5.1",
    "typer==0.13.1",
    "loguru==0.7.2",
    "msgpack==1.1.0",
    "tinyrpc==1.1.7",
    "pillow==11.0.0",
    "requests==2.32.3",
    "opencv-contrib-python==4.9.0.80",
    "numpy==1.26.4"
    ]

[project.scripts]
cloud-track = "cloud_track.cli:main"

[project.optional-dependencies]

backend = [
"av==13.1.0",
"hydra-core==1.3.2",
"gevent==24.11.1",
"werkzeug",
"torchvision==0.20.1",
"transformers==4.46.3",
"bitsandbytes==0.44.1",
"accelerate==1.1.1",
"groundingdino @ git+https://github.com/IDEA-Research/GroundingDINO.git@856dde20aee659246248e20734ef9ba5214f5e44"
]

dev = [
    "pycodestyle==2.12.1",
    "black",
    "autopep8==2.3.1",
    "isort==5.13.2",
    "mypy"
]

eval = [
    "motmetrics",
    "tensorflow"
]

[tool.setuptools]
py-modules = ["cloud_track"]

[tool.autopep8]
max_line_length = 79
in-place = true
recursive = true

[tool.black]
line-length = 79

[tool.isort]
multi_line_output = 3
line_length = 79
include_trailing_comma = true
use_parentheses = true
